# skillsync

./: .gitignore  AGENTS.md  Cargo.toml  README.md  WARP.md  com.antigravity.sync.plist  com.skillsync.plist
.github/: LOGO_INSTRUCTIONS.md
.github/workflows/: ci.yml
docs/plans/: 2026-01-16-antigravity-sync-design.md
scripts/: CLAUDE.md  install.sh  test_sync.sh  uninstall.sh
src/: CLAUDE.md  config.rs  destination.rs  lib.rs  main.rs  preflight.rs  sync.rs  transform.rs  watcher.rs
tests/: config_loading.rs  format_validation.rs  integration_tests.rs
tests/common/: mod.rs
